--- a/LeagueManagement/Views/Umpires/Details.cshtml
+++ b/LeagueManagement/Views/Umpires/Details.cshtml
@@ -4,107 +4,55 @@
     ViewBag.Title = "Details";
 }
 
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        @using (Html.BeginForm())
+            {
+            @Html.AntiForgeryToken()
+            <h2>Umpire Details</h2>
+            <hr />
+            <div class="form-horizontal team">
 
-        
-
-            <div>
-                <h4>User</h4>
-                <hr />
-                <dl class="dl-horizontal">
-                    @*<dt>
-                            @Html.DisplayNameFor(model => model.Gender.Name)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Gender.Name)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Organization.Name)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Organization.Name)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.User1.EmailId)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.User1.EmailId)
-                        </dd>*@
-
-                    @*<dt>
-                            @Html.DisplayNameFor(model => model.UserType.Name)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.UserType.Name)
-                        </dd>*@
-
-                    <dt>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
                         @Html.DisplayNameFor(model => model.EmailId)
-                    </dt>
-
-                    <dd>
+                    </label>
+                    <div class="col-sm-8">
                         @Html.DisplayFor(model => model.EmailId)
-                    </dd>
-
-                    <dt>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
                         @Html.DisplayNameFor(model => model.FirstName)
-                    </dt>
-
-                    <dd>
+                    </label>
+                    <div class="col-sm-8">
                         @Html.DisplayFor(model => model.FirstName)
-                    </dd>
+                    </div>
+                </div>
 
-                    <dt>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
                         @Html.DisplayNameFor(model => model.LastName)
-                    </dt>
-
-                    <dd>
+                    </label>
+                    <div class="col-sm-8">
                         @Html.DisplayFor(model => model.LastName)
-                    </dd>
+                    </div>
+                </div>
 
-                    @*<dt>
-                            @Html.DisplayNameFor(model => model.Password)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Password)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.ProfilePhoto)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.ProfilePhoto)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.CreatedOn)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.CreatedOn)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.ModifiedOn)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.ModifiedOn)
-                        </dd>*@
-
-                </dl>
+                <div class="form-group">
+                    <b>
+                        <label for="inputEmail3" class="col-sm-6 control-label">
+                            @if (User.IsInRole("Admin"))
+                            {
+                                @Html.ActionLink("Edit Schedule", "Edit", new { id = Model.Id }, new { htmlAttributes = new { @class = "col-sm-4 control-label" } })
+                            }
+                            @Html.ActionLink("Back To List", "Index")
+                        </label>
+                    </b>
+                </div>
             </div>
-            <p>
+        }
+    </div>
+</div>
 
-                @Html.ActionLink("Back to List", "Index")
-            </p>
-        </div></div>
+@Html.Partial("_PartialStyle")
