--- a/LeagueManagement/Views/Grounds/Delete.cshtml
+++ b/LeagueManagement/Views/Grounds/Delete.cshtml
@@ -3,46 +3,58 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Ground</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        <h4>Ground</h4>
+        <hr />
+        <div class="form-horizontal team">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label>
+                <div class="col-sm-8">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Address)
+                </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
+                    @Html.DisplayFor(model => model.Address)
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Directions)
+                </label><div class="col-sm-8">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Directions)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Directions)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    @Html.DisplayFor(model => model.Directions)
+                </div>
+            </div>
         </div>
-    }
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-group">
+                <div class="col-md-offset-4 col-md-10">
+                    <input type="submit" value="Delete" class="btn btn-default  create" /> 
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-6 control-label">
+                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
+                </label>
+
+            </div>
+        }
+    </div>
 </div>
+@Html.Partial("_PartialStyle")
