--- a/LeagueManagement/Views/Grounds/Details.cshtml
+++ b/LeagueManagement/Views/Grounds/Details.cshtml
@@ -6,43 +6,59 @@
 
 
 
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
         <div>
             <h4>Ground</h4>
             <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.Name)
-                </dt>
+            <div class="form-horizontal team">
 
-                <dd>
-                    @Html.DisplayFor(model => model.Name)
-                </dd>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Address)
-                </dt>
+                        @Html.DisplayNameFor(model => model.Name)
 
-                <dd>
-                    @Html.DisplayFor(model => model.Address)
-                </dd>
+                    </label>
+                    <div class="col-sm-8">
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Directions)
-                </dt>
+                        @Html.DisplayFor(model => model.Name)
+                    </div>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Directions)
-                </dd>
+                </div>
 
-            </dl>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+
+                        @Html.DisplayNameFor(model => model.Address)
+                    </label>
+
+                    <div class="col-sm-8">
+
+                        @Html.DisplayFor(model => model.Address)
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+
+                        @Html.DisplayNameFor(model => model.Directions)
+                    </label>
+
+                    <div class="col-sm-8">
+
+                        @Html.DisplayFor(model => model.Directions)
+                    </div>
+                </div>
+
+            </div>
+            <p>
+                @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+                @Html.ActionLink("Back to List", "Index")
+            </p>
+
         </div>
-        <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-            @Html.ActionLink("Back to List", "Index")
-        </p>
-
     </div>
-</div>
+    </div>
+    @Html.Partial("_PartialStyle")
