--- a/LeagueManagement/Views/Umpires/Delete.cshtml
+++ b/LeagueManagement/Views/Umpires/Delete.cshtml
@@ -4,109 +4,56 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        @using (Html.BeginForm())
+            {
+            @Html.AntiForgeryToken()
+            <h1>Delete Umpire</h1>
+            <h3>Are you sure you want to delete this umpire?</h3>
+            <hr />
+            <div class="form-horizontal team">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>User</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Gender.Name)
-        </dt>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.EmailId)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.EmailId)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.FirstName)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.FirstName)
+                    </div>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Gender.Name)
-        </dd>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.LastName)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.LastName)
+                    </div>
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Organization.Name)
-        </dt>
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10">
+                        <input type="submit" value="Delete" class="btn btn-default create" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-6 control-label">
+                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
+                    </label>
 
-        <dd>
-            @Html.DisplayFor(model => model.Organization.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User1.EmailId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User1.EmailId)
-        </dd>*@
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.UserType.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserType.Name)
-        </dd>*@
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EmailId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EmailId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ProfilePhoto)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ProfilePhoto)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedOn)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedOn)
-        </dd>*@
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
+@Html.Partial("_PartialStyle")
