--- a/LeagueManagement/Views/Umpires/Index.cshtml
+++ b/LeagueManagement/Views/Umpires/Index.cshtml
@@ -4,23 +4,19 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Umpires</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <div class="col-md-12 col-sm-12 mininumheight">
     <div class="table-responsive">
+        <div class="form-group">
+            <h1>Umpires</h1>
+            <b> @Html.ActionLink("Add New Umpire", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
+
+        </div>
         <table class="col-md-12 table-bordered table-striped table-condensed cf">
             <thead class="cf">
                 <tr>
-                    @*<th>
-                            @Html.DisplayNameFor(model => model.Gender.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Organization.Name)
-                        </th>*@
-                    <th>
+                   <th>
                         @Html.DisplayNameFor(model => model.FirstName)
                     </th>
                     <th>
@@ -29,76 +25,36 @@
                     <th>
                         @Html.DisplayNameFor(model => model.User1.EmailId)
                     </th>
-                    @*<th>
-                            @Html.DisplayNameFor(model => model.UserType.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.EmailId)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.Password)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProfilePhoto)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.CreatedOn)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ModifiedOn)
-                        </th>*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.User1.PhoneNumber)
+                    </th>
                     <th></th>
                 </tr>
-                </thead>
+            </thead>
 
-                @foreach (var item in Model)
-                {
-            <tbody>
-                <tr>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.Gender.Name)
+            @foreach (var item in Model)
+            {
+                <tbody>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Organization.Name)
-                        </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EmailId)
-                    </td>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.UserType.Name)
+                            @Html.DisplayFor(modelItem => item.LastName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.EmailId)
                         </td>
-
                         <td>
-                            @Html.DisplayFor(modelItem => item.Password)
+                            @Html.DisplayFor(modelItem => item.PhoneNumber)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.ProfilePhoto)
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CreatedOn)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ModifiedOn)
-                        </td>*@
-                    <td>
-                      
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
-                </tr>
-            </tbody>
-
-                }
-
+                    </tr>
+                </tbody>
+            }
         </table>
-</div></div>
+    </div>
+</div>
