Major changes done.

--- a/LeagueManagement/Views/Schedules/Create.cshtml
+++ b/LeagueManagement/Views/Schedules/Create.cshtml
@@ -61,7 +61,8 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.GroundId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
-                        @Html.DropDownList("GroundId", null, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.GroundId, ViewBag.GroundId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                       
                         @Html.ValidationMessageFor(model => model.GroundId, "", new { @class = "text-danger" })
                     </div>
                 </div>
