--- a/LeagueManagement/Views/Umpires/Create.cshtml
+++ b/LeagueManagement/Views/Umpires/Create.cshtml
@@ -1,24 +1,24 @@
 ﻿@using System.Web.UI.HtmlControls
-@model IEnumerable<LMEntities.Models.User>
-
+@model LMEntities.Models.User
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Add Umpires</h2>
 
+<div class="form-group">
+    @Html.DisplayNameFor(model => model.Umpire)
+
+    @Html.ValidationMessageFor(model => model.Umpire, "", new { @class = "text-danger" })
+
+</div>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
     <div class="col-md-12 col-sm-12 mininumheight">
         <div class="table-responsive">
-
             <div class="form-horizontal">
-
                 <table class="col-md-12 table-bordered table-striped table-condensed cf">
                     <thead class="cf">
-
                         <tr>
                             <th class="numeric"></th>
                             <th class="numeric">
@@ -33,12 +33,10 @@
                             <th class="numeric">
                                 @Html.DisplayNameFor(model => model.LastName)
                             </th>
-
                         </tr>
                     </thead>
                     <tbody>
-
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Umpires)
                         {
                             <tr>
                                 <td class="numeric">
@@ -54,7 +52,6 @@
                                     @Html.DisplayFor(modelItem => item.PhoneNumber)
                                     <input TYPE="hidden" VALUE="@item.PhoneNumber">
                                 </td>
-
                                 <td class="numeric">
                                     @Html.DisplayFor(modelItem => item.FirstName)
                                     <input TYPE="hidden" VALUE="@item.FirstName">
@@ -64,8 +61,6 @@
                                     <input TYPE="hidden" VALUE="@item.LastName">
                                 </td>
                             </tr>
-
-
                         }
                         <tr>
                             <td colspan="6">
@@ -77,7 +72,6 @@
                             </td>
                         </tr>
                     </tbody>
-
                 </table>
             </div>
         </div>
