--- a/LeagueManagement/Views/Umpires/Delete.cshtml
+++ b/LeagueManagement/Views/Umpires/Delete.cshtml
@@ -41,6 +41,15 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.PhoneNumber)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.PhoneNumber)
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <div class="col-md-offset-4 col-md-10">
                         <input type="submit" value="Delete" class="btn btn-default create" />
                     </div>
