--- a/LeagueManagement/Views/Umpires/Details.cshtml
+++ b/LeagueManagement/Views/Umpires/Details.cshtml
@@ -38,6 +38,14 @@
                         @Html.DisplayFor(model => model.LastName)
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.PhoneNumber)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.PhoneNumber)
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <b>
